Fix gap overflow issue by using fr (free space) units for grid-template-columns instead of percentages. The sidebar image is not responsive currently but maybe that's fine

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -67,7 +67,8 @@ nav a {
 .content {
   padding: 15px 15% 50px 15%;
   display: grid;
-  grid-template-columns: 67% 33%;
+  grid-template-columns: 2fr 1fr;
+  column-gap: 30px;
 }
 
 .left-content {
@@ -111,7 +112,7 @@ aside a {
 aside img {
   /* QUESTION: Why doesn't this shrink the image to the width of the aside?
   object-fit: contain; */
-  width: 100px;
+  width: 220px;
 }
 
 footer {
